fix text alignment on mobile devices

--- a/css/work.css
+++ b/css/work.css
@@ -272,7 +272,7 @@ body {
 @media only screen and (max-width: 320px) {
 
 	.work_preview_text {
-		top: 27px;
+		
 		font-size: 25px;
 	}
 }
